Shorten the lighting condition dialog box and fix the UI of history ang history details page

--- a/app/src/main/res/layout/lighting_conditions_dialog.xml
+++ b/app/src/main/res/layout/lighting_conditions_dialog.xml
@@ -41,7 +41,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="2dp"
                 android:fontFamily="@font/metrophobic_regular"
-                android:text="When capturing images for scanning, it's crucial to pay attention to the lighting conditions as they significantly impact the accuracy of the results. Here are some key considerations: "
+                android:text="For accurate detection, prioritize the following lighting conditions: "
                 android:textColor="@android:color/white"
                 android:textSize="11sp"
                 android:justificationMode="inter_word"
@@ -89,7 +89,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="2dp"
                 android:fontFamily="@font/metrophobic_regular"
-                android:text="Whenever possible, use natural light for capturing images. Natural light provides optimal clarity and color representation, contributing to more accurate results.  "
+                android:text="Use natural light for optimal clarity and color representation in images."
                 android:textColor="@android:color/white"
                 android:textSize="11sp"
                 android:justificationMode="inter_word"
@@ -137,7 +137,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="2dp"
                 android:fontFamily="@font/metrophobic_regular"
-                android:text="The clarity of the image is paramount. Ensure that the lighting conditions allow for a clear and well-defined capture of the meat samples. Poor lighting can lead to inaccuracies in classification. "
+                android:text="Ensure clear and well-defined captures of paper."
                 android:textColor="@android:color/white"
                 android:textSize="11sp"
                 android:justificationMode="inter_word"
@@ -185,7 +185,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="2dp"
                 android:fontFamily="@font/metrophobic_regular"
-                android:text="Harsh shadows can obscure details and impact the algorithm's ability to accurately classify meat freshness. Position the lighting sources to minimize shadows and highlight essential features. "
+                android:text="Position lighting sources to reduce harsh shadows."
                 android:textColor="@android:color/white"
                 android:textSize="11sp"
                 android:justificationMode="inter_word"
@@ -193,7 +193,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
