--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- Custom colors-->
+    <color name="light_gray">#D3D3D3</color>
+    <color name="gray">#808080</color>>
     <color name="dark_gray">#413C3C</color>
     <color name="mint_green">#58D68D</color>
     <color name="pale_red">#ff9f9f</color>
