--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/CapturedImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"/>
+                android:scaleType="fitXY" />
 
             <ImageView
                 android:id="@+id/CrosshairImageView"
