--- a/app/src/main/res/layout/activity_capture_image.xml
+++ b/app/src/main/res/layout/activity_capture_image.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CaptureImageActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +19,6 @@
             android:background="@color/black"
             android:gravity="center"
             android:orientation="horizontal">
-
         </LinearLayout>
 
         <FrameLayout
@@ -29,10 +29,42 @@
 
             <TextureView
                 android:id="@+id/CameraTextureView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <!-- FrameLayout to contain ImageView and TextView -->
+            <FrameLayout
+                android:id="@+id/ChatHeadFrameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <!-- Chathead Image (Tooltip) -->
+                <ImageView
+                    android:id="@+id/ChatheadImageView"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:layout_marginLeft="230dp"
+                    android:layout_marginTop="420dp"
+                    android:elevation="0dp"
+                    android:scaleX="-1"
+                    android:src="@drawable/chat_head" />
+
+                <!-- Text inside ImageView -->
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Low light detected! Activate flash."
+                    android:textColor="@android:color/black"
+                    android:layout_marginLeft="245dp"
+                    android:layout_marginTop="455dp" />
+
+            </FrameLayout>
 
         </FrameLayout>
+
+
+
 
         <LinearLayout
             android:id="@+id/BottomFunctionsLinearLayout"
@@ -74,11 +106,7 @@
                     android:layout_columnWeight="1"
                     android:layout_gravity="center"
                     android:src="@drawable/flash"/>
-
             </GridLayout>
-
         </LinearLayout>
-
     </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
