Detailed history enhancement and Meat Description enhancement

--- a/app/src/main/res/layout/activity_v2_history_details.xml
+++ b/app/src/main/res/layout/activity_v2_history_details.xml
@@ -32,7 +32,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/metrophobic_regular"
-            android:text="Meat Description"
+            android:text="History Description"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
